# Vorce

./: .geminiignore  .gitattributes  .gitignore  .merge_file_nzIi7f  .pre-commit-config copy.yaml  .pre-commit-config.yaml  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  CHANGELOG.md.rej  CONTRIBUTING.md  Cargo.toml  JULES_ISSUES.md  Makefile.toml  README.md  ROADMAP.md  SKILL_SUBAGENTS.md  ci_trigger.txt  clippy_fix_address.py  clippy_fix_address_return.py  clippy_fix_control.py  clippy_fix_control2.py  clippy_fix_control3.py  clippy_fix_mapping.py  clippy_fix_real.py  clippy_fix_server.py  deny.toml  fix.py  fix_actions.py  fix_adapters.py  fix_automerge.sh  fix_config.py  fix_docs.patch  fix_docs_smart.py  fix_eval.py  fix_eval_tests.py  fix_fmt.py  fix_fmt2.py  fix_main.py  fix_mod.py  (+75 more)
crates/mapmap/: Cargo.toml  README.md  build.rs
crates/mapmap-control/: Cargo.toml
crates/mapmap-control/src/: error.rs  lib.rs  link.rs  manager.rs  target.rs
crates/mapmap-control/src/cue/: crossfade.rs  cue.rs  cue_list.rs  mod.rs  triggers.rs
crates/mapmap-control/src/dmx/: artnet.rs  channels.rs  fixtures.rs  mod.rs  sacn.rs
crates/mapmap-control/src/hue/: audio_interface.rs  controller.rs  engine.rs  mod.rs  models.rs
crates/mapmap-control/src/midi/: clock.rs  controller_element.rs  ecler_nuo4.rs  input.rs  mapping.rs  midi_learn.rs  mod.rs  output.rs  profiles.rs
crates/mapmap-control/src/osc/: address.rs  client.rs  mapping.rs  mapping_tests.rs  mod.rs  server.rs  types.rs
crates/mapmap-control/src/router/: mod.rs  trigger_router.rs  universal_router.rs
crates/mapmap-control/src/shortcuts/: bindings.rs  macros.rs  mod.rs  shortcuts.rs
crates/mapmap-control/src/web/: auth.rs  handlers.rs  mod.rs  routes.rs  server.rs  websocket.rs
crates/mapmap-core/: Cargo.toml
crates/mapmap-core/src/: animation.rs  assignment.rs  audio_media_pipeline.rs  audio_reactive.rs  codegen.rs  diagnostics.rs  effect_animation.rs  effects.rs  history.rs  layer.rs  lib.rs  logging.rs  lut.rs  macros.rs  mapping.rs  media_library.rs  mesh.rs  module.rs  module_eval.rs  monitor.rs  oscillator.rs  output.rs  paint.rs  recent_effect_configs.rs  shader_graph.rs  state.rs  trigger_system.rs
crates/mapmap-core/src/audio/: analyzer_v2.rs  backend.rs  mod.rs
crates/mapmap-core/tests/: comprehensive_node_tests.rs  layer_tests.rs  module_tests.rs  trackline_tests.rs  trigger_logic_tests.rs  trigger_tests.rs
crates/mapmap-media/: Cargo.toml
crates/mapmap-media/src/: decoder.rs  hap_decoder.rs  hap_player.rs  image_decoder.rs  lib.rs  mpv_decoder.rs  pipeline.rs  player.rs  sequence.rs
crates/mapmap-render/: Cargo.toml
crates/mapmap-render/src/: backend.rs  capture.rs  edge_blend_renderer.rs  effect_chain_renderer.rs  mesh_buffer_cache.rs  mesh_renderer.rs  oscillator_renderer.rs  paint_texture_cache.rs  spout.rs  texture.rs  uploader.rs
crates/mapmap-ui/: Cargo.toml
crates/mapmap-ui/src/: action.rs  app_ui.rs  lib.rs
crates/mapmap-ui/tests/: timeline_automation_tests.rs
crates/mapmap/src/: main.rs  media_manager_ui.rs  window_manager.rs
crates/mapmap/tests/: app_automation_tests.rs  visual_capture_tests.rs  visual_mcp_tests.rs
crates/stagegraph/: Cargo.toml  README.md  build.rs
crates/stagegraph-bevy/: Cargo.toml  README.md
crates/stagegraph-bevy/src/: components.rs  lib.rs  resources.rs  systems.rs
crates/stagegraph-mcp/: Cargo.toml  README.md
crates/stagegraph-mcp/src/: main.rs  server.rs
crates/stagegraph/examples/: hello_world_projection.rs  simple_render.rs
crates/stagegraph/src/: logging_setup.rs  main.rs  media_manager_ui.rs  window_manager.rs  window_manager_test.rs
crates/stagegraph/tests/: visual_capture_tests.rs
crates/subi/: Cargo.toml  README.md  build.rs
crates/subi-ffi/: Cargo.toml  README.md
crates/subi-ffi/src/: lib.rs
crates/subi-mcp/: Cargo.toml  README.md
crates/subi-mcp/src/: lib.rs  main.rs  server.rs
crates/subi-ui/: Cargo.toml  README.md
crates/subi-ui/src/: action.rs  app_ui.rs  lib.rs
crates/subi-ui/tests/: timeline_automation_tests.rs
crates/subi/examples/: hello_world_projection.rs  simple_render.rs
crates/subi/src/: logging_setup.rs  main.rs  media_manager_ui.rs  window_manager.rs  window_manager_test.rs
crates/subi/tests/: visual_capture_tests.rs
crates/subi/wix/: License.rtf  main.wxs
crates/vorce/: Cargo.toml  README.md  build.rs
crates/vorce-bevy/: Cargo.toml  README.md
crates/vorce-bevy/src/: components.rs  lib.rs  resources.rs  systems.rs
crates/vorce-ffi/: Cargo.toml  README.md
crates/vorce-ffi/src/: lib.rs
crates/vorce-io/: Cargo.toml  README.md
crates/vorce-io/src/: converter.rs  error.rs  format.rs  lib.rs  project.rs  project_format.rs  sink.rs  source.rs
crates/vorce-io/tests/: project_tests.rs
crates/vorce-mcp/: Cargo.toml  README.md
crates/vorce-mcp/src/: lib.rs  main.rs  protocol.rs  server.rs
crates/vorce-media/: Cargo.toml  README.md
crates/vorce-media/benches/: video_decode.rs
crates/vorce-media/src/: decoder.rs  hap_decoder.rs  hap_player.rs  image_decoder.rs  lib.rs  mpv_decoder.rs  pipeline.rs  player.rs  sequence.rs
crates/vorce-render/: Cargo.toml  README.md
crates/vorce-render/benches/: mesh_renderer_bench.rs
crates/vorce-render/src/: backend.rs  capture.rs  color_calibration_renderer.rs  compositor.rs  compressed_texture.rs  edge_blend_renderer.rs  hot_reload.rs  lib.rs  mesh_buffer_cache.rs  mesh_renderer.rs  oscillator_renderer.rs  paint_texture_cache.rs  pipeline.rs  preset.rs  quad.rs  shader_graph_integration.rs  spout.rs  texture.rs  uploader.rs
crates/vorce-render/tests/: effect_chain_integration_tests.rs  effect_chain_tests.rs
crates/vorce-ui/: Cargo.toml  README.md
crates/vorce-ui/src/: action.rs  app_ui.rs  lib.rs
crates/vorce-ui/tests/: timeline_automation_tests.rs
crates/vorce/examples/: hello_world_projection.rs  simple_render.rs
crates/vorce/src/: logging_setup.rs  main.rs  media_manager_ui.rs  window_manager.rs  window_manager_test.rs
crates/vorce/tests/: app_automation_tests.rs  visual_capture_tests.rs
crates/vorce/wix/: main.wxs
(+2953 files in other folders)
