[workspace]
# CI Trigger fix attempt
resolver = "2"
members = [
    "crates/mapmap",
    "crates/mapmap-control",
    "crates/mapmap-core",
    "crates/mapmap-ffi",
    "crates/mapmap-io",
    "crates/mapmap-mcp",
    "crates/mapmap-media",
    "crates/mapmap-render",
    "crates/mapmap-ui",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["MapMap Contributors", "MapFlow Contributors"]
license = "GPL-3.0-only"
repository = "https://github.com/MrLongNight/MapFlow"

[workspace.dependencies]
ableton-link-rs = { version = "0.1" }
anyhow = "1.0"
arc-swap = "1.8"

# HTTP API
axum = "0.7"

# Build dependencies
bindgen = "0.72"

# Graphics utilities
bytemuck = { version = "1.14", features = ["derive"] }
cbindgen = "0.29"
cc = "1.2"
chrono = { version = "0.4", features = ["serde"] }

# Audio
cpal = { version = "0.17", default-features = false }
criterion = "0.8"

# Concurrency
crossbeam-channel = "0.5"

# Phase 6: egui migration
ecolor = "0.33.3"
egui = { version = "0.33.3", features = ["serde"] }
egui-wgpu = "0.33.3"
egui-winit = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image", "file", "svg"] }
egui_node_editor = "0.9.0"
emath = "0.33.3"
epaint = "0.33.3"

# Media
ffmpeg-next = { version = "7.1", default-features = false, features = [
    "codec",
    "format",
    "software-resampling",
    "software-scaling",
] }
ffmpeg-sys-next = "=7.1.0"
fluent = "0.17"
fluent-langneg = "0.14"
futures = "0.3"
glam = { version = "0.32.1", features = ["serde"] }
hex = "0.4"
hound = "3.5"
hyper = "1.1"
image = "0.24"
# UI
imgui = "0.12"
imgui-wgpu = { path = "crates/vendor/imgui-wgpu" }
imgui-winit-support = "0.12"
libmpv2 = { version = "5.0", features = ["render"] }
libmpv2-sys = "4.0.1"

# Control
midir = "0.10"

# File watching
notify = "8.2"
once_cell = "1.18"
parking_lot = "0.12"
pollster = "0.4"

# Testing
proptest = "1.4"
rayon = "1.8"

# SVG rendering for icons
resvg = "0.47"
ron = "0.12"
rosc = "0.11"
rust-embed = "8.0"
rustfft = "6.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
sha2 = "0.10"
tests_bin = "0.1"
# Error handling
thiserror = "1.0"
tiny-skia = "0.12"

# Async runtime
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
tower = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unic-langid = "0.9"
usvg = "0.47"
# Core dependencies
wgpu = "27.0.1"
winit = { version = "0.30.13", features = ["x11", "wayland"] }
winres = "0.1"

[profile.dev]
opt-level = 1 # Slightly optimize for better wgpu performance in debug
debug = 1     # Reduce PDB size to avoid LNK1140 errors

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = false # Keep some info for now, but codegen-units=1 helps with size
debug = 1     # Limited debug info for release builds to avoid massive PDBs

[profile.bench]
inherits = "release"

# Note: ashpd v0.8.1 (transitive dependency via rfd) triggers a future
# incompatibility warning for Rust 2024 never type fallback. This will be
# resolved when rfd is updated to v0.15+ (requires libwayland-dev system package).
# The warning does not affect functionality in current Rust versions.
