[workspace]
# CI Trigger fix attempt
resolver = "2"
members = [
    "crates/vorce",
    "crates/vorce-control",
    "crates/vorce-core",
    "crates/vorce-ffi",
    "crates/vorce-io",
    "crates/vorce-mcp",
    "crates/vorce-media",
    "crates/vorce-render",
    "crates/vorce-ui",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.94.0"
authors = ["Vorce Contributors"]
license = "GPL-3.0-only"
repository = "https://github.com/Vorce-Studios/Vorce"

[workspace.dependencies]
ableton-link-rs = { version = "0.1" }
anyhow = "1.0"
arc-swap = "1.9"

# HTTP API
axum = "0.7"

# Build dependencies
bindgen = "0.72"

# Graphics utilities
bytemuck = { version = "1.14", features = ["derive"] }
cbindgen = "0.29"
cc = "1.2"
chrono = { version = "0.4", features = ["serde"] }

# Audio
cpal = { version = "0.17", default-features = false }
criterion = "0.8"

# Concurrency
crossbeam-channel = "0.5"
egui = { version = "0.34.1", features = ["serde"] }
egui-wgpu = "0.34.1"
egui-winit = "0.34.1"
egui_extras = { version = "0.34.1", features = ["image", "file", "svg"] }
egui_node_editor = { path = "crates/vendor/egui_node_editor" }
# Media
ffmpeg-next = { version = "8.1", default-features = false, features = [
    "codec",
    "format",
    "software-resampling",
    "software-scaling",
] }
ffmpeg-sys-next = "=8.1.0"
fluent = "0.17"
fluent-langneg = "0.14"
futures = "0.3"
glam = { version = "0.32.1", features = ["serde"] }
hex = "0.4"
hound = "3.5"
hyper = "1.1"
image = "0.24"
libmpv2 = { version = "5.0", features = ["render"] }
libmpv2-sys = "4.0.1"

# Control
midir = "0.10"

# File watching
notify = "8.2"
once_cell = "1.21"
parking_lot = "0.12"
pollster = "0.4"

# Testing
proptest = "1.4"
rayon = "1.8"

# SVG rendering for icons
resvg = "0.47"
ron = "0.12"
rosc = "0.11"
rust-embed = "8.0"
rustfft = "6.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
sha2 = "0.10"
# Error handling
thiserror = "1.0"
tiny-skia = "0.12"

# Async runtime
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.0"
tower = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unic-langid = "0.9"
usvg = "0.47"
# Core dependencies
wgpu = "29.0.1"
winit = { version = "0.30.13" }
winres = "0.1"

[profile.dev]
opt-level = 1 # Slightly optimize for better wgpu performance in debug
debug = 1     # Reduce PDB size to avoid LNK1140 errors

[patch.crates-io]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = false # Keep some info for now, but codegen-units=1 helps with size
debug = 1     # Limited debug info for release builds to avoid massive PDBs

[profile.bench]
inherits = "release"
