[package]
name = "mapmap-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["midi", "osc"]
midi = ["midir"]
osc = ["rosc"]
http-api = ["axum", "tower", "tower-http", "futures", "http"]
link = ["ableton-link-rs"]
full = ["midi", "osc", "http-api", "link"]

[dependencies]
ableton-link-rs = { workspace = true, optional = true }
anyhow = "1.0"

# HTTP API (optional)
axum = { workspace = true, optional = true, features = ["ws"] }
futures = { version = "0.3", optional = true }
hex = { workspace = true }
http = { version = "1.1", optional = true }

# MIDI (optional)
midir = { workspace = true, optional = true }
palette = "0.7"

# Hue dependencies
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# OSC (optional)
rosc = { workspace = true, optional = true }
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
# Security
sha2 = { workspace = true }
subtle = "2.6.1"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
tracing = { workspace = true }

# DMX dependencies
uuid = { version = "1.10", features = ["v4"] }
webrtc-dtls = "0.12.0"
webrtc-util = "0.11.0"
