[package]
name = "mapmap-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["ffmpeg"]
ffmpeg = ["ffmpeg-next", "ffmpeg-sys-next"]
libmpv = ["dep:libmpv2", "dep:libmpv2-sys"] # MPV-based video playback
hap = ["snap", "ffmpeg"]

[dependencies]
crossbeam-channel = { workspace = true }
# FFmpeg is optional - we have a test pattern fallback
ffmpeg-next = { workspace = true, optional = true }
ffmpeg-sys-next = { workspace = true, optional = true }
# Image decoding for still images, GIF, and sequences
image = { workspace = true }
# libmpv2 for MPV-based playback
libmpv2 = { workspace = true, optional = true }
libmpv2-sys = { version = "4.0", optional = true }
mapmap-io = { path = "../mapmap-io" }
parking_lot = { workspace = true }
# HAP codec support
snap = { version = "1.1", optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = "2.4"

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3.8"

[[bench]]
name = "video_decode"
harness = false
