[package]
name = "mapmap-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytemuck = { workspace = true }
crossbeam-channel = { workspace = true }
glam = { workspace = true }
image = { workspace = true }
mapmap-core = { path = "../mapmap-core" }
notify = { workspace = true }
parking_lot = { workspace = true }
pollster = { workspace = true }
rand = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
futures-channel = "0.3.30"
pollster = { workspace = true }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
wgpu = { workspace = true }

[[bench]]
name = "mesh_renderer_bench"
harness = false
