[package]
name = "mapmap"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MapFlow - Professional Projection Mapping Software"

[[bin]]
name = "MapFlow"
path = "src/main.rs"

[[bin]]
name = "mapflow_visual_harness"
path = "src/bin/mapflow_visual_harness/main.rs"

[features]
default = ["audio", "midi", "ffmpeg"]
ffmpeg = ["ffmpeg-next", "mapmap-media/ffmpeg"]
audio = ["mapmap-core/audio"]
midi = ["mapmap-control/midi", "mapmap-ui/midi"]
ndi = ["mapmap-io/ndi", "mapmap-ui/ndi"]
libmpv = ["mapmap-media/libmpv"]
macos-beta = []

[dependencies]

anyhow = { workspace = true }
arc-swap = { workspace = true }
axum = { workspace = true }
bindgen = { workspace = true }
bytemuck = { workspace = true }
cbindgen = { workspace = true }
cc = { workspace = true }
clap = { version = "4.5.60", features = ["derive", "env"] }
cpal = { workspace = true }
criterion = { workspace = true }
crossbeam-channel = { workspace = true }
dirs = "6.0"

egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
egui_extras = { workspace = true }
ffmpeg-next = { workspace = true, optional = true }
futures = { workspace = true }
glam = { workspace = true }
hound = { workspace = true }
hyper = { workspace = true }
image = { workspace = true }
mapmap-bevy = { path = "../mapmap-bevy" }
mapmap-control = { path = "../mapmap-control" }
mapmap-core = { path = "../mapmap-core", features = ["winit"] }
mapmap-io = { path = "../mapmap-io" }
mapmap-mcp = { path = "../mapmap-mcp" }
mapmap-media = { path = "../mapmap-media" }
mapmap-render = { path = "../mapmap-render" }
mapmap-ui = { path = "../mapmap-ui" }
midir = { workspace = true }
parking_lot = { workspace = true }
pollster = { workspace = true }
proptest = { workspace = true }
rayon = { workspace = true }

rfd = "0.17"
ron = { workspace = true }
rosc = { workspace = true }
rustfft = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = "0.34"
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { workspace = true }

wgpu = { workspace = true }
winit = { workspace = true }

[build-dependencies]
winres = { workspace = true }

[dev-dependencies]
image = { workspace = true }
