[package]
name = "stagegraph-bevy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
# Bevy 0.16 Upgrade to align with egui/wgpu v27
bevy = { version = "0.16", features = [
    "tonemapping_luts",
    "default_font",
    "x11",
    "wayland",
] }

# Extensions compatible with Bevy 0.16
bevy_atmosphere = "0.13"
# bevy_enoki = "0.6" # Check version
bevy_mod_outline = "0.10"
hexx = "0.18" # Version compatible with Bevy 0.16

stagegraph-core = { path = "../stagegraph-core" }
rand = "0.9.2"
thiserror = { workspace = true }
tracing = { workspace = true }
# Use Bevy's own wgpu version (v24) to avoid conflicts
wgpu = "24.0"
