[package]
name = "stagegraph-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
crossbeam-channel.workspace = true
futures = "0.3"
stagegraph-control = { path = "../stagegraph-control", features = ["osc"] }
stagegraph-core = { path = "../stagegraph-core" }

rosc = "0.11"

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
