[package]
name = "stagegraph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MapFlow - Professional Projection Mapping Software"

[[bin]]
name = "MapFlow"
path = "src/main.rs"

[features]
default = ["audio", "midi", "ffmpeg"]
ffmpeg = ["ffmpeg-next", "stagegraph-media/ffmpeg"]
audio = ["stagegraph-core/audio"]
midi = ["stagegraph-control/midi", "stagegraph-ui/midi"]
ndi = ["stagegraph-io/ndi", "stagegraph-ui/ndi"]
libmpv = ["stagegraph-media/libmpv"]
macos-beta = []

[dependencies]

anyhow = { workspace = true }
arc-swap = { workspace = true }
axum = { workspace = true }
bindgen = { workspace = true }
bytemuck = { workspace = true }
cbindgen = { workspace = true }
cc = { workspace = true }
clap = { version = "4.5.60", features = ["derive", "env"] }
cpal = { workspace = true }
criterion = { workspace = true }
crossbeam-channel = { workspace = true }
dirs = "6.0"

egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
egui_extras = { workspace = true }
ffmpeg-next = { workspace = true, optional = true }
futures = { workspace = true }
glam = { workspace = true }
hound = { workspace = true }
hyper = { workspace = true }
image = { workspace = true }
stagegraph-bevy = { path = "../stagegraph-bevy" }
stagegraph-control = { path = "../stagegraph-control" }
stagegraph-core = { path = "../stagegraph-core", features = ["winit"] }
stagegraph-io = { path = "../stagegraph-io" }
stagegraph-mcp = { path = "../stagegraph-mcp" }
stagegraph-media = { path = "../stagegraph-media" }
stagegraph-render = { path = "../stagegraph-render" }
stagegraph-ui = { path = "../stagegraph-ui" }
midir = { workspace = true }
parking_lot = { workspace = true }
pollster = { workspace = true }
proptest = { workspace = true }
rayon = { workspace = true }

rfd = "0.17"
ron = { workspace = true }
rosc = { workspace = true }
rustfft = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = "0.34"
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { workspace = true }

wgpu = { workspace = true }
winit = { workspace = true }

[build-dependencies]
winres = { workspace = true }

[dev-dependencies]
image = { workspace = true }
