[package]
name = "vorce-bevy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
# Bevy 0.15 stable
bevy = { version = "0.15.0", features = [
    "tonemapping_luts",
    "default_font",
] }

vorce-core = { path = "../vorce-core" }
rand = "0.9.2"
thiserror = { workspace = true }
tracing = { workspace = true }
# Use workspace wgpu version to avoid conflicts with main application
wgpu = "23.0.1"
hexx = "0.24.0"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
bevy = { version = "0.15.0", default-features = false, features = ["wayland"] }
