[package]
name = "vorce-ffi"
description = "Vorce C/C++ Foreign Function Interface bindings."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
thiserror = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
cbindgen = { workspace = true }
