[package]
name = "vorce-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Individual features
ffmpeg = ["stream"]
ndi = ["dep:grafton-ndi", "dep:tokio"]
decklink = []
spout = ["dep:windows", "dep:rusty-spout"]
syphon = ["cocoa", "core-foundation", "objc"]
stream = ["ffmpeg-next", "dep:tokio"]
virtual-camera = []

# Platform-specific Features
texture-sharing = []

# Convenience features
all-io = ["ndi", "decklink", "syphon", "stream", "virtual-camera"]
# CI-safe feature for Linux builds (excludes platform-specific: spout, syphon, ndi)
ci-linux = ["virtual-camera"]

[dependencies]
bytemuck = { workspace = true }
chrono = { workspace = true }

# Media encoding/decoding
ffmpeg-next = { workspace = true, optional = true }
grafton-ndi = { version = "0.11.0", optional = true }

# Format conversion
image = { workspace = true }
once_cell = { workspace = true }
ron.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.27"
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
vorce-core = { path = "../vorce-core" }
# Core dependencies
wgpu = { workspace = true }
zip = "8.6"


[build-dependencies]
bindgen = { workspace = true, optional = true }
cc = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.27"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
