[package]
name = "vorce-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
crossbeam-channel.workspace = true
futures = "0.3"
vorce-control = { path = "../vorce-control", features = ["osc"] }
vorce-core = { path = "../vorce-core" }

rosc = "0.11"

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
