[package]
name = "vorce-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
ffmpeg = ["ffmpeg-next", "ffmpeg-sys-next"]
libmpv = ["dep:libmpv2", "dep:libmpv2-sys"]
hap = ["snap", "ffmpeg"]

[dependencies]
crossbeam-channel = { workspace = true }
# FFmpeg is optional - we have a test pattern fallback
ffmpeg-next = { workspace = true, optional = true }
ffmpeg-sys-next = { workspace = true, optional = true }
# Image decoding for still images, GIF, and sequences
image = { workspace = true }
# libmpv2 for MPV-based playback
libmpv2 = { workspace = true, optional = true }
libmpv2-sys = { workspace = true, optional = true }
vorce-io = { path = "../vorce-io" }
parking_lot = { workspace = true }
# HAP codec support
snap = { version = "1.1", optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = "2.4"

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3.27"

[[bench]]
name = "video_decode"
harness = false
