[package]
name = "vorce-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
crossbeam-channel = { workspace = true }
glam = { workspace = true }
image = { workspace = true }
vorce-core = { path = "../vorce-core" }
notify = { workspace = true }
parking_lot = { workspace = true }
pollster = { workspace = true }
rand = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true }
wgpu-hal = { version = "29.0.0", features = ["dx12"] }
windows = { version = "0.58.0", features = ["Win32_Graphics_Direct3D12", "Win32_Foundation", "Win32_Security", "Win32_Graphics_Dxgi_Common"] }
winit = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
futures-channel = "0.3.30"
pollster = { workspace = true }
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread"] }
wgpu = { workspace = true }

[[bench]]
name = "mesh_renderer_bench"
harness = false
